--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       Tutorial Case
 
       Cinema Penguin Royal Wedding Page
-      Author: 
-      Date:   
+      Author: Max Woods 
+      Date:   1.24.19
 
       Filename:   cp_royal.html
 
@@ -19,7 +19,7 @@
    <title>Cinema Penguin: Royal Wedding (1951)</title>
    <link href="cp_base.css" rel="stylesheet" />
    <link href="cp_styles.css" rel="stylesheet" />
-  
+   <link rel="stylesheet" href="cp_media.css" />
 </head>
 
 <body>
@@ -96,7 +96,12 @@
             very well be his discovery of an 11-year-old singing sensation named 
             Frances Gumm, whom the world now knows better as Judy Garland.
          </p>          
-               
+        <cite>Royal Wedding</cite>  
+         <audio controls>
+           <source src="cp_overture.mp3" type="audio/mp3" />
+           <source src="cp_overture.ogg" type="audio/ogg" />
+           <p>To play this audio clip, your browser must support HTML5.</p>
+         </audio>
       </aside>
             
       <aside>
