--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
    <link href="cp_base.css" rel="stylesheet" />
    <link href="cp_styles.css" rel="stylesheet" />
    <link rel="stylesheet" href="cp_media.css" />
+   <link rel="stylesheet" href="cp_animate.css" />
 </head>
 
 <body>
@@ -96,12 +97,14 @@
             very well be his discovery of an 11-year-old singing sensation named 
             Frances Gumm, whom the world now knows better as Judy Garland.
          </p>          
-        <cite>Royal Wedding</cite>  
+         <p>Click the play button below to hear the msuical overture for Burton Lane's <cite>Royal Wedding</cite>.</p>
          <audio controls>
            <source src="cp_overture.mp3" type="audio/mp3" />
            <source src="cp_overture.ogg" type="audio/ogg" />
-           <p>To play this audio clip, your browser must support HTML5.</p>
-         </audio>
+           <p>
+             <em>To play this audio clip, your browser needs to support HTML5.</em>
+           </p>
+         </audio>     
       </aside>
             
       <aside>
@@ -114,7 +117,15 @@
             would seamlessly dance across the four sides of the box, creating the 
             illusion of weightlessness.
          </p>    
-     
+         <p>Click the play button to view this classic dance sequence.</p>
+         <video controls poster="cp_photo2.png">
+          <source src="cp_dance.mp4" type="video/mp4" />
+          <source src="cp_dance.webm" type="video/webm" />
+          <track kind="captions" label="Dance Captions" src="cp_captions.vtt" default />
+          <p>
+                     <em>To play this audio clip, your browser needs to support HTML5.</em>
+        </p>
+        </video>
       </aside> 
    </section>  
    
